// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when timer is active 1`] = `
<div>
  <TimeDisplay
    timeInMs={1500000}
  />
  <Button
    onClick={[Function]}
    style={
      Object {
        "marginRight": "20px",
      }
    }
    text="Pause"
  />
  <Button
    onClick={[Function]}
    text="Reset"
  />
  <TaskInput
    onChange={[Function]}
    onSubmit={[Function]}
    value="Learn Marko"
  />
  <TaskList
    onDeleteClick={[Function]}
    tasks={
      Array [
        Object {
          "id": "batman1",
          "text": "The Dark Knight",
          "title": "Batman",
        },
        Object {
          "id": "superman2",
          "text": "???",
          "title": "Superman",
        },
      ]
    }
  />
  <Button
    onClick={[Function]}
    text="Clear All"
  />
</div>
`;

exports[`should render correctly when timer is not active 1`] = `
<div>
  <TimeDisplay
    timeInMs={1500000}
  />
  <Button
    onClick={[Function]}
    style={
      Object {
        "marginRight": "20px",
      }
    }
    text="Play"
  />
  <Button
    onClick={[Function]}
    text="Reset"
  />
  <TaskInput
    onChange={[Function]}
    onSubmit={[Function]}
    value="Learn Marko"
  />
  <TaskList
    onDeleteClick={[Function]}
    tasks={
      Array [
        Object {
          "id": "batman1",
          "text": "The Dark Knight",
          "title": "Batman",
        },
        Object {
          "id": "superman2",
          "text": "???",
          "title": "Superman",
        },
      ]
    }
  />
  <Button
    onClick={[Function]}
    text="Clear All"
  />
</div>
`;
